# Process this file with autoconf to produce a configure script.
AC_INIT(ical2html, 0.1, bert@w3.org)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([ical2html.c])
AM_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_LIBOBJ

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])
AC_CHECK_HEADER(ical.h,,AC_MSG_ERROR("Cannot find ical.h. Please install libical or set CPPFLAGS=-I<path-to-libical>. See http://softwarestudio.org/libical/"))
AC_CHECK_HEADER(icalss.h,,AC_MSG_ERROR("Cannot find icalss.h. Please install libical or set CPPFLAGS=-I<path-to-libical>. See http://softwarestudio.org/libical/"),[#include <ical.h>])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([strcasecmp strdup])
AC_CHECK_LIB(ical,icaltime_compare,,AC_MSG_ERROR("Cannot find libical. Please install it or set CPPFLAGS=-I<path-to-libical>. See http://softwarestudio.org/libical/"))
AC_CHECK_LIB(icalss,icalfileset_new,,AC_MSG_ERROR("Cannot find libical. Please install it or set CPPFLAGS=-I<path-to-libical>. See http://softwarestudio.org/libical/"))

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
