#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(Ical2html, 2.1, bert@w3.org)
AM_INIT_AUTOMAKE([-Wall])
AC_CONFIG_SRCDIR([ical2html.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

# Checks for libraries.
AC_SEARCH_LIBS(icalparser_new, ical,,AC_MSG_FAILURE(Cannot find libical.))
AC_SEARCH_LIBS(icalfileset_new, icalss,,AC_MSG_FAILURE(Cannot find libicalss.))

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([strcasecmp strdup strerror])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
